--- a/index.html
+++ b/index.html
@@ -1,28 +1,373 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-	</body>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <!-- Needs a Title -->
+  <title>Suzanne Etheridge</title>
+  <!-- Mobile Friendly -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Internal bootstrap themed CSS. Reference: https://bootswatch.com/flatly/#typography-->
+  <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css" rel="stylesheet" integrity="sha384-+ENW/yibaokMnme+vBLnHMphUYxHs34h9lpdbSLuAwGkOKFRl4C34WkjazBtb7eT" crossorigin="anonymous">
+  <!-- External CSS - un-comment out the line below and create a main.css in a styles folder -->
+  <!-- <link rel="stylesheet" href="styles/main.css"/> -->
+  <!-- For menus and common javascript things that use jquery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!-- For Math Formulas - Basic Configuration -->
+  <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <!-- Ready-to-go icons - check out this site for a reference http://fontawesome.io/icons/ -->
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+  <!-- Google analytics -->
+  <script>
+    (function(i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-82640741-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+  <style>
+    /*.row [class*="col-"]{
+margin-bottom: -99999px;
+padding-bottom: 99999px;
+}
+
+.row{
+overflow: hidden;
+}*/
+
+  </style>
+</head>
+
+<body>
+  <!-- Keep the DIV container to add the margins and make it scalable for mobile -->
+  <nav class="navbar navbar-default">
+
+    <!-- <div class="container-fluid">
+
+      <div class="navbar-header"> <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button> <a class="navbar-brand" href="#">Brand</a> </div>
+
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+          <li><a href="#">Link</a></li>
+          <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+              <li class="divider"></li>
+              <li><a href="#">One more separated link</a></li>
+            </ul>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Link</a></li>
+        </ul>
+      </div>
+    </div> -->
+  </nav>
+
+  <div class="container">
+
+    <div class="jumbotron">
+
+      <div class="row">
+
+        <div class="col-md-8">
+          <h1>Suzanne Etheridge</h1>
+
+
+        </div>
+
+        <div class="col-md-4"> <img src="http://eskipaper.com/images/shapes-wallpaper-3.jpg" alt="decorative image" class="img-rounded" width="275" height="183"> </div>
+      </div>
+    </div>
+    <!-- begin row 1 -->
+
+    <div class="row">
+
+
+
+        <div class="panel panel-primary">
+
+          <div class="panel-heading">
+            <h3 class="panel-title">Instructor Information</h3> </div>
+
+          <div class="panel-body">
+            <p>Pellissippi State Community College</p>
+            <p>Mathematics Professor</p>
+            <p>Portable D 104   </p>
+            <p> <a href ="tel:865-694-6686">865-694-6443</a> </p>
+            <p> <a href ="mailto:scetheridge@pstcc.edu"> scetheridge@pstcc.edu </a>     </p>
+
+            <div class="btn-toolbar pull-right">  <a class="btn btn-default" role="button" href="schedule.html" target="_blank">Campus Schedule</a>
+              <!-- ending of btn toolbar -->
+            </div>
+            <div class="modal fade" id="myModal" role="dialog">
+                <div class="modal-dialog">
+
+                  <!-- Modal content-->
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+                      <h4 class="modal-title">Modal Header</h4>
+                    </div>
+                    <div class="modal-body">
+                      <input class="form-control" type="text" id="foo" value='&lt;!DOCTYPE html&gt; &lt;html lang=&quot;en&quot;&gt; &lt;head&gt; &lt;!-- the below title automatically pulls in the title from stackedit.io --&gt; &lt;title&gt;&lt;%= documentTitle %&gt;&lt;/title&gt; &lt;meta charset=&quot;utf-8&quot;&gt; &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1&quot;&gt; &lt;script src=&quot;https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js&quot;&gt;&lt;/script&gt; &lt;script type=&quot;text/javascript&quot; src=&quot;https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML&quot;&gt;&lt;/script&gt; &lt;link href=&quot;https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css&quot; rel=&quot;stylesheet&quot; integrity=&quot;sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1&quot; crossorigin=&quot;anonymous&quot;&gt; &lt;link rel=&quot;stylesheet&quot; href=&quot;css/mainstyles.css&quot;/&gt; &lt;/head&gt; &lt;div class=&quot;container&quot;&gt; &lt;!-- the below documentHTML pulls in the body of text from stackedit.io --&gt; &lt;%= documentHTML %&gt; &lt;/body&gt; &lt;/html&gt;'>
+
+<!-- Trigger -->
+<button class="btn" data-clipboard-target="#foo">
+  Copy
+</button>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+<!-- ending of panel -->
+          </div>
+        </div>
+        <!-- ending of panel 1 of row-->
+
+
+
+        <div class="panel panel-primary">
+
+          <div class="panel-heading">
+            <h3 class="panel-title">MATH 1830</h3> </div>
+
+          <div class="panel-body">
+            <p>Applied Calculus</p>
+<p>Topics include differentiation and integration of polynomial, rational, exponential, and logarithmic functions and methods of numerical integration. Topics from business modeling, such as economic applications and case studies, are explored with computer simulations, computer labs, or calculators. A graphing calculator is required.
+
+</p>
+<div class="btn-toolbar pull-right"> 
+  <a class="btn btn-default" role="button" href="mtwrcalendar.html" target="_blank">TR Calendar</a>
+     <!-- <a class="btn btn-default" role="button" href="trcalendar.html" target="_blank">MWF Calendar</a> -->
+   <a class="btn btn-default" role="button" href="coursepolicies1830.html" target="_blank">Course Policies</a>
+   <a class="btn btn-default" role="button" href="https://psccmath.github.io/math1830" target="_blank">Course Content</a>
+  <!-- ending of btn toolbar -->
+</div>
+
+
+
+
+          </div>
+        </div>
+        <!-- ending of panel 2 of row-->
+
+
+
+
+        <div class="panel panel-primary">
+
+          <div class="panel-heading">
+            <h3 class="panel-title">MATH 1630</h3> </div>
+
+          <div class="panel-body">
+            <p>Survey of Mathematics</p>
+<p>
+  Topics include Linear functions and applications, interest, annuities, amortization, systems of linear equations, Gauss-Jordan elimination, matrix theory, and linear programming using graphical and simplex methods.</p>
+  <div class="btn-toolbar pull-right"> 
+    <!-- <a class="btn btn-default" role="button" href="mtwrcalendar.html" target="_blank">MTWR Calendar</a> -->
+       <a class="btn btn-default" role="button" href="trcalendar.html" target="_blank">TR Calendar</a>
+     <a class="btn btn-default" role="button" href="coursepolicies1630.html" target="_blank">Course Policies</a>
+     <a class="btn btn-default" role="button" href="https://psccmath.github.io/math1630" target="_blank">Course Content</a>
+    <!-- ending of btn toolbar -->
+  </div>
+
+  <!-- <button type="button" class="btn btn-default" data-toggle="collapse" data-target="#step1">1</button>  <button type="button" class="btn btn-default" data-toggle="collapse" data-target="#step2">2</button>
+    <div id="step1" class="collapse">
+      <p>
+        this is step 1
+      </p>
+    </div
+
+      <p id="step2" class="collapse">
+        this is step 2
+      </p> -->
+
+
+
+
+            <!-- <a class="btn btn-default pull-right" role="button" href="http://www.wiris.com/editor/demo/en/mathml-latex" target="_blank">Wiris</a> </div> -->
+        </div>
+        <!-- ending of panel 3 of row-->
+      </div>
+      <!-- ending of first row -->
+
+    <!-- begin 2nd row -->
+
+    <!-- <div class="row">
+
+      <div class="col-md-4">
+
+        <div class="panel panel-primary">
+
+          <div class="panel-heading">
+            <h3 class="panel-title">Zip File to Download</h3> </div>
+
+          <div class="panel-body">
+            <p> Contains the css file, the images folder, and the Word document we are converting to Markdown. </p>
+            <ul>
+              <li>Download the zip file.</li>
+              <li> Go to your downloads folder</li>
+              <li>Open the zip file</li>
+              <li>Click "extract all" button</li>
+            </ul><a class="btn btn-default pull-right" role="button" href="accessmarkdown.zip" target="_blank">Access Markdown Zip File</a> </div>
+        </div>
+         ending of panel 1 of row 2
+      </div>
+
+      <div class="col-md-4">
+
+        <div class="panel panel-primary">
+
+          <div class="panel-heading">
+            <h3 class="panel-title">Powerpoint Presentation</h3> </div>
+
+          <div class="panel-body">
+            <p>Copy of the Inservice 2016 Markdown Powerpoint Presentation</p> <a class="btn btn-default pull-right" role="button" href="inservicemarkdown2016pptSept27.pdf" target="_blank">PDF of Powerpoint</a> </div>
+        </div>
+         ending of panel 2 of row 2
+      </div> -->
+
+      <div class="col-md-4">
+        <!-- <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">panel title goes here</h3>
+      </div>
+      <div class="panel-body">
+      <p>
+        stuff goes here
+      </p>
+      </div>
+    </div> -->
+        <!-- ending of panel 3 of row 2-->
+      </div>
+      <!-- ending of first row -->
+    </div> -->
+    <!-- Ending for DIV Container -->
+  </div>
+</body>
+
 </html>
+
+
+
+
+
+  <!-- <head>
+    <meta charset="utf-8">
+    <title>Mary Monroe-Ellis</title>
+  </head>
+  <body style="background-color:#FFF5EE">
+   <h1> PSCC MATH</h1>
+<h2>  Basic Calculus and Modeling</h2>
+<p>Mary Monroe-Ellis</p>
+  <p>Susan Mosteller</p>
+a change
+   -->
+
+
+   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+   <!-- <link rel="stylesheet" href="css/w3.css"> -->
+   <!-- <link rel="stylesheet" href="http://www.w3schools.com/lib/w3-theme-black.css"> -->
+   <!-- <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css"> -->
+
+
+   <!-- Side Navigation on click -->
+   <!--<nav class="w3-sidenav w3-white w3-card-2 w3-animate-left" style="display:none;z-index:2" id="mySidenav">
+     <a href="javascript:void(0)" onclick="w3_close()" class="w3-closenav w3-xxxlarge w3-text-teal">Close
+       <i class="fa fa-remove"></i>
+     </a>
+     <a href="#">Link 1</a>
+     <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+    <a href="#">Link 4</a>
+    <a href="#)">Link 5</a>
+  </nav>-->
+
+   <!-- Navbar -->
+   <!-- <div class="w3-top">
+    <ul class="w3-navbar w3-black w3-left-align w3-large">
+     <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
+       <a class="w3-hover-white w3-large w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
+     </li>
+     <li><a href="https://www.pstcc.edu" target="_blank"><i class="fa fa-home w3-margin-right"></i>PSCC</a></li> -->
+     <!--<li class="w3-hide-small"><a href="#" class="w3-hover-white">Mary Monroe-Ellis</a></li>
+     <li class="w3-hide-small"><a href="#" class="w3-hover-white">Susan Mosteller</a></li>-->
+    <!-- <li class="w3-hide-small w3-dropdown-hover">
+
+
+      <li class="w3-hide-small w3-dropdown-hover">
+        <a href="#" class="w3-hover-white" title="Notifications">MATH 1830<i class="fa fa-caret-down"></i></a>
+           <div class="w3-dropdown-content w3-white w3-card-4">
+           <a href="https://psccmath.github.io/math1830" target="_blank">Course Content</a>
+             <a href="coursepolicies.html" target="_blank">Course Policies</a>
+
+             <a href="schedule.html" target="_blank">Instructor Schedule</a>
+              <a href="Calendar.html" target="_blank">Weekly Calendar Fall 2016</a>
+           </div>
+         </li> -->
+      <!--   <li class="w3-hide-small w3-dropdown-hover">
+        <a href="#" class="w3-hover-white" title="Notifications">MATH 1010<i class="fa fa-caret-down"></i></a>
+           <div class="w3-dropdown-content w3-white w3-card-4">
+             <a href="#">Course Policies</a>
+             <a href="#">Contact Information</a>
+             <a href="#">Instructor Schedule</a>
+               <a href="#">Weekly Calendar Fall 2016</a>
+           </div>
+         </li>-->
+
+
+    <!--<a href="https://psccmath.github.io/math1830" target="_blank" class="w3-hover-white" title="Notifications">MATH 1830<i class="fa fa-caret-down"></i></a>
+    <a href="#" target="_blank" class="w3-hover-white" title="Notifications">MATH 1010<i class="fa fa-caret-down"></i></a>-->
+       <!--<div class="w3-dropdown-content w3-white w3-card-4">
+         <a href="math1830.html">Mary Monroe-Ellis</a>
+         <a href="math1830.html">Susan Mosteller</a>
+
+       </div>
+     </li>-->
+<!--
+     <li class="w3-hide-small w3-right"><a href="#" class="w3-hover-teal" title="Search"><i class="fa fa-search"></i></a></li>
+    </ul>
+   </div> -->
+
+   <!-- Navbar on small screens -->
+   <!-- <div id="navDemo" class="w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:43px;">
+     <ul class="w3-navbar w3-left-align w3-large w3-theme">
+       <li><a href="#">Mary Monroe-Ellis</a></li>
+       <li><a href="#">Susan Mosteller</a></li>
+       <li><a href="#">Link 3</a></li>
+     </ul>
+   </div> -->
+
+<!-- <div class="w3-container">
+     <p class="w3-xxlarge">Mary Monroe-Ellis</p>
+     <p class="w3-xlarge"><a href="mailto:mmonroeellis@pstcc.edu">mmonroeellis@pstcc.edu</a>
+ </p>
+      <p class="w3-xlarge">Office: Alexander 203</p>
+      <p class="w3-xlarge"><a href="tel:865-694-6686">865-694-6686</a></p>
+</div> -->
+
+    <!-- </body> -->
