--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@ overflow: hidden;
         <div class="panel panel-primary">
 
           <div class="panel-heading">
-            <h3 class="panel-title">MATH 1830</h3> </div>
+            <h3 class="panel-title">MATH 1010</h3> </div>
 
           <div class="panel-body">
-            <p>Applied Calculus</p>
-<p>Topics include differentiation and integration of polynomial, rational, exponential, and logarithmic functions and methods of numerical integration. Topics from business modeling, such as economic applications and case studies, are explored with computer simulations, computer labs, or calculators. A graphing calculator is required.
+            <p>Math for General Studies</p>
+<p>Topics include critical thinking skills, problem solving, logic, geometry, measurement, consumer math, probability and statistics. A TI-83 or TI-84 graphing calculator is required.
 
 </p>
 <div class="btn-toolbar pull-right"> 
@@ -178,22 +178,7 @@ overflow: hidden;
 
 
 
-        <div class="panel panel-primary">
-
-          <div class="panel-heading">
-            <h3 class="panel-title">MATH 1630</h3> </div>
-
-          <div class="panel-body">
-            <p>Survey of Mathematics</p>
-<p>
-  Topics include Linear functions and applications, interest, annuities, amortization, systems of linear equations, Gauss-Jordan elimination, matrix theory, and linear programming using graphical and simplex methods.</p>
-  <div class="btn-toolbar pull-right"> 
-    <!-- <a class="btn btn-default" role="button" href="mtwrcalendar.html" target="_blank">MTWR Calendar</a> -->
-       <a class="btn btn-default" role="button" href="trcalendar.html" target="_blank">TR Calendar</a>
-     <a class="btn btn-default" role="button" href="coursepolicies1630.html" target="_blank">Course Policies</a>
-     <a class="btn btn-default" role="button" href="https://psccmath.github.io/math1630" target="_blank">Course Content</a>
-    <!-- ending of btn toolbar -->
-  </div>
+       
 
   <!-- <button type="button" class="btn btn-default" data-toggle="collapse" data-target="#step1">1</button>  <button type="button" class="btn btn-default" data-toggle="collapse" data-target="#step2">2</button>
     <div id="step1" class="collapse">
