--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ overflow: hidden;
 
         </div>
 
-        <div class="col-md-4"> <img src="http://eskipaper.com/images/shapes-wallpaper-3.jpg" alt="decorative image" class="img-rounded" width="275" height="183"> </div>
+        <div class="col-md-4"> <img src="images/Daisies.png" alt="decorative image" class="img-rounded" width="275" height="183"> </div>
       </div>
     </div>
     <!-- begin row 1 -->
