--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@ overflow: hidden;
 <div class="btn-toolbar pull-right"> 
   <a class="btn btn-default" role="button" href="mtwrcalendar.html" target="_blank">TR Calendar</a>
      <!-- <a class="btn btn-default" role="button" href="trcalendar.html" target="_blank">MWF Calendar</a> -->
-   <a class="btn btn-default" role="button" href="coursepolicies1830.html" target="_blank">Course Policies</a>
-   <a class="btn btn-default" role="button" href="https://psccmath.github.io/math1830" target="_blank">Course Content</a>
+   <a class="btn btn-default" role="button" href="1010coursepolicies.html" target="_blank">Course Policies</a>
+   <a class="btn btn-default" role="button" href="https://psccmath.github.io/math1010" target="_blank">Course Content</a>
   <!-- ending of btn toolbar -->
 </div>
 
