--- a/1010coursepolicies.html
+++ b/1010coursepolicies.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head lang="en">
-<link rel="stylesheet" type="text/css" href="/content/enforced/7535096-11011.201910/ModernRed/TemplateFiles/stylesheet.css" />
+<link rel="stylesheet" type="text/css" href="stylesheet.css" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Sample Syllabus: Introduction to Science and Technology 100</title>
 </head>
