--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ overflow: hidden;
             <p> <a href ="tel:865-694-6443">865-694-6443</a> </p>
             <p> <a href ="mailto:scetheridge@pstcc.edu"> scetheridge@pstcc.edu </a>     </p>
 
-            <div class="btn-toolbar pull-right">  <a class="btn btn-default" role="button" href="schedule.html" target="_blank">Campus Schedule</a>
+            <div class="btn-toolbar pull-right">  <a class="btn btn-default" role="button" href="campusschedule19F.html" target="_blank">Campus Schedule</a>
               <!-- ending of btn toolbar -->
             </div>
             <div class="modal fade" id="myModal" role="dialog">
