--- a/1010coursepolicies.html
+++ b/1010coursepolicies.html
@@ -24,13 +24,13 @@
 <li><strong style="font-size: 1em;">Email:</strong><span style="font-size: 1em;">&nbsp;scetheridge@pstcc.edu</span></li>
 <li><strong>Office Hours:</strong></li>
 <ul>
-<li>Monday from 12:55 to 1:50 pm</li>
+<li>Monday from 2:00 to 2:55 pm</li>
 <li>Tuesday from 9:40 to 10:35 am</li>
-<li>Wednesday from&nbsp;9:40 to 10:35 am</li>
-<li>Thursday from&nbsp;2:00 to 2:55 pm</li>
-<li>Friday from 12:55-1:50 pm</li>
+<li>Wednesday from 9:40 to 10:35 am</li>
+<li>Thursday from 9:40 to 10:35 pm</li>
+<li>Friday from 11:50-12:45 pm</li>
 <li>other times by appointment</li>
-<li>Additionally I will tutor in ERC 313 on Tuesdays from 2:00 to 3:00 pm and on Fridays from 9:30 to 11:00 am.</li>
+<li>Additionally I will tutor in ERC 313 on Tuesdays and Thursdays from 2:00 to 3:15 pm.</li>
 </ul>
 </ul>
 <p>Topics in this course include critical thinking skills, problem solving, logic, geometry, measurement, consumer math, probability and statistics.</p>
@@ -55,13 +55,14 @@
 <ul>
 <li>4 Tests: 100 points each&nbsp; ------ 50%</li>
 <li>4 Projects: 50 points each&nbsp; ---- 20%</li>
-<li>Weekly&nbsp;Quizzes&nbsp; ---------------- 10%</li>
+<li>Weekly Quizzes&nbsp; ---------------- 10%</li>
 <li>MyOpenMath homework&nbsp; ------&nbsp; 15%</li>
 <li>Class attendance&nbsp; ---------------&nbsp; 5%</li>
 </ul>
 <p>Tests and quizzes will be given as scheduled.</p>
 <ul>
 <li>All missed tests/quizzes/homework will have a grade of zero.</li>
+<li>The 2 lowest quiz scores will be dropped.</li>
 <li>You can use 4 Late passes in MyOpenMath.</li>
 <li>No other late assignments/projects/quizzes will be accepted.</li>
 </ul>
